# rsyslog-splunk-plugin

./: .codecov.yml  .gitignore  .gitmodules  CMakeLists.txt  README.md  config.h  omsplunks2s.c  s2s.c  s2s.h  s2s_test.c  splunk-logger.c  test_tls.c
.github/workflows/: ci.yml
misc/: format
misc/splunk-capture-setup/: 10.0.2_capture.pcap  README.md  splunk.yml
pkg/: MANIFEST  Makefile
pkg/debian/: control
